--- a/lib_common/src/main/res/values/dimens.xml
+++ b/lib_common/src/main/res/values/dimens.xml
@@ -29,6 +29,8 @@
     <dimen name="dp48">48dp</dimen>
     <dimen name="dp50">50dp</dimen>
     <dimen name="dp96">96dp</dimen>
+    <dimen name="dp100">100dp</dimen>
+    <dimen name="dp120">120dp</dimen>
     <dimen name="dp160">160dp</dimen>
 
     <dimen name="sp1">1dp</dimen>
